--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 authors = ["Joao Moreno <mail@joaomoreno.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-sysfs_gpio = "0.5"
+futures = "0.1"
+tokio = "0.1"
+
+[dependencies.sysfs_gpio]
+version = "0.5"
+default-features = false
+features = ["use_tokio"]
 
 [profile.release]
 codegen-units=1
