--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 futures = "0.1"
 tokio = "0.1"
 
+[dev-dependencies]
+colorsys = "0.5"
+
 [dependencies.sysfs_gpio]
 version = "0.5"
 default-features = false
